# stack-pilot

./: .gitignore  DEMO.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.workers  README.md  StackPilot.sln  docker-compose.yml
.github/workflows/: ci.yml  deploy-staging.yml
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: 01-product-requirements.md  02-architecture.md  03-module-breakdown.md  04-database-schema.md  05-api-design.md  06-ai-workflow-design.md  07-connector-design.md  08-background-job-design.md  09-security-model.md  10-ui-page-map.md  11-mvp-roadmap.md  12-desktop-app-design.md  13-mobile-app-design.md  14-billing-pricing.md  15-connector-sdk.md  16-soc2-readiness.md  17-multi-region-deployment.md  18-this-week-release-checklist.md  19-release-rollback-plan.md  20-release-notes-draft.md  21-support-handoff-and-monitoring.md  design-partner-outreach.md  ops-runbook.md
frontend/: package-lock.json  package.json
frontend/e2e/: playwright.config.ts  screenshot-tour.mjs
frontend/e2e/tests/: helpers.ts  (+3 more)
frontend/public/: .gitkeep
frontend/src/: middleware.ts
mobile/: app.json  package.json
mobile/app/: _layout.tsx  index.tsx
src/StackPilot.Api/: Program.cs  StackPilot.Api.csproj  StackPilot.Api.http  appsettings.json
src/StackPilot.Application/: StackPilot.Application.csproj
src/StackPilot.Infrastructure/: DependencyInjection.cs  StackPilot.Infrastructure.csproj
src/StackPilot.Workers/: Program.cs  StackPilot.Workers.csproj  Worker.cs  appsettings.json
(+173 files in other folders)
