[package]
name = "stackpilot-desktop"
version = "0.1.0"
description = "StackPilot Desktop Application"
authors = ["StackPilot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "notification"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
git2 = "0.19"
notify = "7"
tokio = { version = "1", features = ["full"] }

[lib]
name = "stackpilot_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "stackpilot-desktop"
path = "src/main.rs"
